Simplify class attribution
Some classes were cut out to make room for wrapper classes in higher-level components.
Thus, the concept of property inheritance will be applied more on styling.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
   <main>
     <section class="hero">
       <img src="./images/logo.svg" alt="Clipboard logo" class="logo-large">
-      <h1 class="h-large">A history of everything you copy</h1>
-      <p class="p-large">
-        Clipboard allows you to track and organize everything you copy. 
-        Instantly access your clipboard on all your devices.
-      </p>
+      <div class="wrapper-start text-large">
+        <h1>A history of everything you copy</h1>
+        <p>
+          Clipboard allows you to track and organize everything you copy. 
+          Instantly access your clipboard on all your devices.
+        </p>
+      </div>
       <div class="btn-wrapper">
-        <button class="btn-A">Download for iOS</button>
-        <button class="btn-B">Download for Mac</button>
+        <button>Download for iOS</button>
+        <button>Download for Mac</button>
       </div>
     </section>
     
-    <section class="about-snippets">
-      <section class="wrapper-start">
-        <h2 class="h-medium">Keep track of your snippets</h2>
-        <p class="p-medium">
+    <section class="tracking-snippets">
+      <section class="wrapper-start text-medium">
+        <h2>Keep track of your snippets</h2>
+        <p>
           Clipboard instantly stores any item you copy in the cloud, 
           meaning you can access your snippets immediately on all your 
           devices. Our Mac and iOS apps will help you organize everything.
@@ -37,61 +39,61 @@
       </section>
       <section class="wrapper-end">
         <img src="./images/image-computer.png" alt="Image of a computer">
-        <div class="wrapper-end">
+        <div class="wrapper-end text-small">
           <section>
-            <h3 class="h-small">Quick Search</h3>
-            <p class="p-small">Easily search your snippets by content, category, web address, application, and more.</p>
+            <h3>Quick Search</h3>
+            <p>Easily search your snippets by content, category, web address, application, and more.</p>
           </section>
           <section>
-            <h3 class="h-small">iCloud Sync</h3>
-            <p class="p-small">
+            <h3>iCloud Sync</h3>
+            <p>
               Instantly saves and syncs snippets across all your devices.
             </p>
           </section>
           <section>
-            <h3 class="h-small">Complete History</h3>
-            <p class="p-small">Retrieve any snippets from the first moment you started using the app.</p>
+            <h3>Complete History</h3>
+            <p>Retrieve any snippets from the first moment you started using the app.</p>
           </section>
         </div>
       </section>
     </section>
 
-    <section class="clipboard-access">
-      <h2 class="h-medium">Access Clipboard anywhere</h2>
-      <p class="p-medium">
+    <section class="clipboard-access text-medium">
+      <h2>Access Clipboard anywhere</h2>
+      <p>
         Whether you’re on the go, or at your computer, you can access all your Clipboard 
         snippets in a few simple clicks.
       </p>
     </section>
 
     <section class="productivity">
-      <div class="wrapper-start">
-        <h2 class="h-medium">
+      <div class="wrapper-start text-medium">
+        <h2>
           Supercharge your workflow
         </h2>
-        <p class="p-medium">
+        <p>
           We’ve got the tools to boost your productivity.
         </p>
       </div>
-      <div class="wrapper-end">
+      <div class="wrapper-end text-small">
         <section class="blacklists">
           <img src="./images/icon-blacklist.svg" alt="Blacklist icon">
-          <h3 class="h-small">Create blacklists</h3>
-          <p class="p-small">
+          <h3>Create blacklists</h3>
+          <p>
             Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
           </p>
         </section>
-        <section class="text-snippets">
+        <section class="about-snippets">
           <img src="./images/icon-text.svg" alt="Text icon">
-          <h3 class="h-small">Plain text snippets</h3>
-          <p class="p-small">
+          <h3>Plain text snippets</h3>
+          <p>
             Remove unwanted formatting from copied text for a consistent look.
           </p>
         </section>
         <section class="sneak-preview">
           <img src="./images/icon-preview.svg" alt="Sneak preview icon">
-          <h3 class="h-small">Sneak preview</h3>
-          <p class="p-small">
+          <h3>Sneak preview</h3>
+          <p>
             Quick preview of all snippets on your Clipboard for easy access.
           </p>
         </section>
@@ -106,15 +108,15 @@
       <img src="./images/logo-vector-graphics.png" alt="Vector Graphics's logo">
     </section>
 
-    <section class="downloads">
-      <h2 class="h-medium">Clipboard for iOS and Mac OS</h2>
-      <p class="p-medium">
+    <section class="downloads text-medium">
+      <h2>Clipboard for iOS and Mac OS</h2>
+      <p>
         Available for free on the App Store. Download for Mac or iOS, sync with iCloud and 
         you’re ready to start adding to your clipboard.
       </p>
       <div class="btn-wrapper">
-        <button class="btn-A">Download for iOS</button>
-        <button class="btn-B">Download for Mac</button>
+        <button>Download for iOS</button>
+        <button>Download for Mac</button>
       </div>
     </section>
   </main>
