Add image of the .clipboard-access section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
       </section>
       <section class="wrapper-end">
-        <img src="./images/image-computer.png" alt="Image of a computer">
+        <img src="./images/image-computer.png" alt="Computer running Clipboard">
         <div class="wrapper-end text-small">
           <section>
             <h3>Quick Search</h3>
@@ -59,11 +59,14 @@
     </section>
 
     <section class="clipboard-access text-medium">
-      <h2>Access Clipboard anywhere</h2>
-      <p>
-        Whether you’re on the go, or at your computer, you can access all your Clipboard 
-        snippets in a few simple clicks.
-      </p>
+      <div class="wrapper-start">
+        <h2>Access Clipboard anywhere</h2>
+        <p>
+          Whether you’re on the go, or at your computer, you can access all your Clipboard 
+          snippets in a few simple clicks.
+        </p>
+      </div>
+      <img src="./images/image-devices.png" alt="Smartphone and tablet running Clipboard">
     </section>
 
     <section class="productivity">
