Wrap textual elements in the Downloads section

--- a/index.html
+++ b/index.html
@@ -111,12 +111,14 @@
       <img src="./images/logo-vector-graphics.png" alt="Vector Graphics's logo">
     </section>
 
-    <section class="downloads text-medium">
-      <h2>Clipboard for iOS and Mac OS</h2>
-      <p>
-        Available for free on the App Store. Download for Mac or iOS, sync with iCloud and 
-        you’re ready to start adding to your clipboard.
-      </p>
+    <section class="downloads">
+      <div class="wrapper-start text-medium">
+        <h2>Clipboard for iOS and Mac OS</h2>
+        <p>
+          Available for free on the App Store. Download for Mac or iOS, sync with iCloud and 
+          you’re ready to start adding to your clipboard.
+        </p>
+      </div>
       <div class="btn-wrapper">
         <button>Download for iOS</button>
         <button>Download for Mac</button>
