--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Clipboard landing page</title>
+  <link rel="stylesheet" href="./index.css">
   <style>
     .attribution { display: none; }
     .attribution p { font-size: 11px; text-align: center; }
