Assign children of .productivity.wrapper-end a common class

--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
         </p>
       </div>
       <div class="wrapper-end text-small">
-        <section class="blacklists">
+        <section class="productivity-tool" id="blacklists">
           <img src="./images/icon-blacklist.svg" alt="Blacklist icon">
           <h3>Create blacklists</h3>
           <p>
             Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
           </p>
         </section>
-        <section class="about-snippets">
+        <section class="productivity-tool" id="about-snippets">
           <img src="./images/icon-text.svg" alt="Text icon">
           <h3>Plain text snippets</h3>
           <p>
             Remove unwanted formatting from copied text for a consistent look.
           </p>
         </section>
-        <section class="sneak-preview">
+        <section class="productivity-tool" id="sneak-preview">
           <img src="./images/icon-preview.svg" alt="Sneak preview icon">
           <h3>Sneak preview</h3>
           <p>
