--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       </section>
     </section>
 
-    <section class="clipboard-access text-medium">
-      <div class="wrapper-start">
+    <section class="clipboard-access">
+      <div class="wrapper-start text-medium">
         <h2>Access Clipboard anywhere</h2>
         <p>
           Whether you’re on the go, or at your computer, you can access all your Clipboard 
