Assign class "item" to 3rd level sections

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
       <section class="wrapper-end">
         <img src="./images/image-computer.png" alt="Computer running Clipboard">
         <div class="wrapper-end text-small">
-          <section>
+          <section class="item">
             <h3>Quick Search</h3>
             <p>Easily search your snippets by content, category, web address, application, and more.</p>
           </section>
-          <section>
+          <section class="item">
             <h3>iCloud Sync</h3>
             <p>
               Instantly saves and syncs snippets across all your devices.
             </p>
           </section>
-          <section>
+          <section class="item">
             <h3>Complete History</h3>
             <p>Retrieve any snippets from the first moment you started using the app.</p>
           </section>
@@ -80,21 +80,21 @@
         </p>
       </div>
       <div class="wrapper-end text-small">
-        <section class="productivity-tool" id="blacklists">
+        <section class="item" id="blacklists">
           <img src="./images/icon-blacklist.svg" alt="Blacklist icon">
           <h3>Create blacklists</h3>
           <p>
             Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
           </p>
         </section>
-        <section class="productivity-tool" id="about-snippets">
+        <section class="item" id="about-snippets">
           <img src="./images/icon-text.svg" alt="Text icon">
           <h3>Plain text snippets</h3>
           <p>
             Remove unwanted formatting from copied text for a consistent look.
           </p>
         </section>
-        <section class="productivity-tool" id="sneak-preview">
+        <section class="item" id="sneak-preview">
           <img src="./images/icon-preview.svg" alt="Sneak preview icon">
           <h3>Sneak preview</h3>
           <p>
